# DORMIFY

./: .gitignore  README.md  dormify-contexto-proyecto.md  dormify-reglas-arquitectura.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/db/: database.py  init_db.py
backend/app/middlewares/: __init__.py  auth.py
backend/app/models/: __init__.py  favorite.py  post.py  property.py  service.py  user.py
backend/app/routes/: auth.py  favorites.py  posts.py  properties.py  services.py  users.py
backend/app/schemas/: favorite.py  post.py  property.py  service.py  user.py
backend/app/services/: __init__.py  validators.py
docs/: decisiones-tecnicas.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  router.js
frontend/js/services/: api.js  auth.js
frontend/js/utils/: helpers.js  validators.js
frontend/js/views/: arriendo-detalle.js  arriendos.js  auth.js  foro.js  home.js  perfil.js  post-detalle.js  publicar-arriendo.js  publicar-servicio.js  servicio-detalle.js  servicios.js
